[gd_scene load_steps=30 format=3 uid="uid://b14uq6kn8i7r0"]

[ext_resource type="Script" path="res://src/control_sticks.gd" id="1_4y8b4"]
[ext_resource type="Script" path="res://src/spawner.gd" id="1_ojbat"]
[ext_resource type="Script" path="res://src/world.gd" id="1_qmkdd"]
[ext_resource type="PackedScene" uid="uid://owk041bgsx5c" path="res://ui/main_button.tscn" id="2_6ekdf"]
[ext_resource type="Script" path="res://src/game_ui.gd" id="2_emipb"]
[ext_resource type="Texture2D" uid="uid://chnqaif0pj2bq" path="res://assets-dragg/blue_ui/CGB01-orange_M_pillShaped_btn.png" id="3_mdccy"]
[ext_resource type="Texture2D" uid="uid://tw0h5ghcdso0" path="res://assets-dragg/blue_ui/Btn_OtherButton_Hexagon01_Red.png" id="4_07w3t"]
[ext_resource type="Script" path="res://src/button_label.gd" id="4_40cpl"]
[ext_resource type="Script" path="res://src/game_camera.gd" id="4_isc8j"]
[ext_resource type="Texture2D" uid="uid://cki8hmnrdbr1a" path="res://assets-dragg/images/smallcircle.png" id="4_xwvsk"]
[ext_resource type="PackedScene" uid="uid://bumxigukd3hh2" path="res://player/base_character.tscn" id="5_1nxl5"]
[ext_resource type="Texture2D" uid="uid://bxe6l8pow7ypw" path="res://assets-dragg/images/bigcircle.png" id="5_thexg"]
[ext_resource type="Texture2D" uid="uid://dyi4h6xsxnpjd" path="res://assets-dragg/ui/pause_icon.png" id="6_hd83x"]
[ext_resource type="PackedScene" uid="uid://bfx54y75ia2vg" path="res://ball/ball.tscn" id="6_ydc3q"]
[ext_resource type="PackedScene" uid="uid://c3bo0ps5tay8y" path="res://enemy/base_enemy.tscn" id="7_cwvuu"]
[ext_resource type="Texture2D" uid="uid://c3ykad5rl80o2" path="res://assets-dragg/ui/Icon_Gold.Png" id="7_eyfe2"]
[ext_resource type="AudioStream" uid="uid://dhdcl8ho45ex7" path="res://assets-dragg/audio/collectcoin-6075.mp3" id="10_vihk2"]

[sub_resource type="LabelSettings" id="LabelSettings_qidyi"]
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fjwxq"]
font_size = 52
font_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_fofvi"]

[sub_resource type="LabelSettings" id="LabelSettings_2fruv"]
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="NavigationMesh" id="NavigationMesh_4n7di"]
vertices = PackedVector3Array(-99.5, 1, -99.5, -99.5, 1, 99.5, 99.5, 1, 99.5, 99.5, 1, -99.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="BoxShape3D" id="BoxShape3D_vr4iw"]
size = Vector3(199.925, 1, 199.42)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kqj47"]
albedo_color = Color(0.356863, 1, 0.443137, 1)

[sub_resource type="BoxMesh" id="BoxMesh_tglxd"]
size = Vector3(200, 1, 200)

[sub_resource type="Environment" id="Environment_dwyoh"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vjoxl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rhm6q"]
albedo_color = Color(0.788235, 0.341176, 0.976471, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_cb2s3"]

[node name="World3D" type="Node3D"]
script = ExtResource("1_qmkdd")

[node name="UI" type="Node" parent="."]
script = ExtResource("2_emipb")

[node name="ControlTopRight" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="MainButton" parent="UI/ControlTopRight" instance=ExtResource("2_6ekdf")]
z_index = 2
layout_mode = 1
offset_left = -234.0
offset_top = 51.0
offset_right = 22.0
offset_bottom = 250.0
texture_normal = ExtResource("4_07w3t")

[node name="ButtonLabel" type="Label" parent="UI/ControlTopRight/MainButton"]
layout_mode = 0
offset_left = 9.0
offset_top = 50.0
offset_right = 159.0
offset_bottom = 119.0
label_settings = SubResource("LabelSettings_qidyi")
horizontal_alignment = 1
script = ExtResource("4_40cpl")

[node name="PauseIcon" type="Sprite2D" parent="UI/ControlTopRight/MainButton"]
position = Vector2(81, 95)
scale = Vector2(0.17041, 0.17041)
texture = ExtResource("6_hd83x")

[node name="ControlTimer" type="Control" parent="UI/ControlTopRight"]
anchors_preset = 0
offset_left = -127.0
offset_top = 269.0
offset_right = -87.0
offset_bottom = 309.0
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="UI/ControlTopRight/ControlTimer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -64.0
offset_right = 128.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mdccy")

[node name="TimerLabel" type="Label" parent="UI/ControlTopRight/ControlTimer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = -36.0
offset_right = 17.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
text = "12:12"
label_settings = SubResource("LabelSettings_fjwxq")
horizontal_alignment = 1

[node name="ControlCoin" type="Control" parent="UI/ControlTopRight"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = 366.0
offset_right = -97.0
offset_bottom = 406.0
grow_horizontal = 2
grow_vertical = 2

[node name="CoinLabel" type="Label" parent="UI/ControlTopRight/ControlCoin"]
layout_mode = 1
offset_left = -292.0
offset_top = -17.0
offset_right = -23.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_fofvi")
theme_override_font_sizes/font_size = 100
text = "0"
label_settings = SubResource("LabelSettings_2fruv")
horizontal_alignment = 2

[node name="CoinTexture" type="TextureRect" parent="UI/ControlTopRight/ControlCoin"]
layout_mode = 0
offset_left = -18.0
offset_top = -6.0
offset_right = 47.0
offset_bottom = 59.0
texture = ExtResource("7_eyfe2")
expand_mode = 1

[node name="ControlTopLeft" type="Control" parent="UI"]
z_index = 2
layout_mode = 3
anchors_preset = 0

[node name="ControlTopCenter" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="ControlSticks" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
script = ExtResource("1_4y8b4")
max_distance = 80.0

[node name="StickCircleContainer" type="Control" parent="UI/ControlSticks"]
layout_mode = 1
anchors_preset = 0

[node name="StickCircle" type="TextureRect" parent="UI/ControlSticks/StickCircleContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -188.0
offset_right = 188.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_thexg")
expand_mode = 1

[node name="StickButtonContainer" type="Control" parent="UI/ControlSticks"]
layout_mode = 1
anchors_preset = 0

[node name="StickButton" type="TextureRect" parent="UI/ControlSticks/StickButtonContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.5
offset_top = -205.5
offset_right = 205.5
offset_bottom = 205.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_xwvsk")
expand_mode = 1

[node name="Spawner" type="Node" parent="."]
script = ExtResource("1_ojbat")

[node name="SpawnTimer" type="Timer" parent="Spawner"]

[node name="Audio" type="Node" parent="."]

[node name="CoinCollectAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_vihk2")

[node name="BackgroundAudio" type="AudioStreamPlayer" parent="Audio"]

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_4n7di")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D"]
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.153954, 0, 0.14551)
shape = SubResource("BoxShape3D_vr4iw")

[node name="Floor" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D"]
material_override = SubResource("StandardMaterial3D_kqj47")
mesh = SubResource("BoxMesh_tglxd")
skeleton = NodePath("../../..")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.725735, 0.687975, 0, -0.687975, 0.725735, 0, 20.902, 0)
shadow_enabled = true
shadow_blur = 2.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dwyoh")

[node name="GameCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, -34.5571, 8.3593, -4.00721)
current = true
script = ExtResource("4_isc8j")

[node name="Player" parent="." instance=ExtResource("5_1nxl5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.9934, 0.514858, -0.534044)
wall_min_slide_angle = 0.785398

[node name="Ball" parent="." instance=ExtResource("6_ydc3q")]
transform = Transform3D(0.866244, -0.499622, 0, 0.499622, 0.866244, 0, 0, 0, 1, -13.0799, 1.51805, -6.67017)
axis_lock_linear_y = false

[node name="Enemies" type="Node3D" parent="."]

[node name="BaseEnemy" parent="Enemies" instance=ExtResource("7_cwvuu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.92482, 0.544712, -28.0401)

[node name="BaseEnemy5" parent="Enemies" instance=ExtResource("7_cwvuu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.92482, 0.544712, -25.0401)

[node name="BaseEnemy6" parent="Enemies" instance=ExtResource("7_cwvuu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9248, 0.544712, -25.0401)

[node name="BaseEnemy7" parent="Enemies" instance=ExtResource("7_cwvuu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.9248, 0.544712, -22.0401)

[node name="BaseEnemy9" parent="Enemies" instance=ExtResource("7_cwvuu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.92482, 0.544712, -22.0401)

[node name="BaseEnemy10" parent="Enemies" instance=ExtResource("7_cwvuu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.92482, 0.544712, -18.0401)

[node name="BaseEnemy8" parent="Enemies" instance=ExtResource("7_cwvuu")]

[node name="BaseEnemy4" parent="Enemies" instance=ExtResource("7_cwvuu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.9248, 0.544712, -21.0401)

[node name="BaseEnemy3" parent="Enemies" instance=ExtResource("7_cwvuu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.00682, 0.544712, -24.4161)

[node name="BaseEnemy2" parent="Enemies" instance=ExtResource("7_cwvuu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.70168, 0.544712, -8.18727)

[node name="Obstacle" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75761, 0.196007)
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacle"]
shape = SubResource("CylinderShape3D_vjoxl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Obstacle"]
material_override = SubResource("StandardMaterial3D_rhm6q")
mesh = SubResource("CylinderMesh_cb2s3")

[connection signal="pressed" from="UI/ControlTopRight/MainButton" to="." method="_on_main_button_pressed"]
[connection signal="timeout" from="Spawner/SpawnTimer" to="Spawner" method="_on_spawn_timer_timeout"]
